# agent-aided-coding

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  main.py  out  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs.agent.md  implement.agent.md  plan.agent.md  review.agent.md  tests.agent.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  infra.instructions.md  tests.instructions.md
.github/prompts/: implement-from-plan.prompt.md  new-feature-plan.prompt.md  refactor-service.prompt.md  review-pr.prompt.md  write-tests.prompt.md
.github/workflows/: checklist-validator.yml
docs/: copilot-agentic-demo.md  copilot-chat-walkthrough.md
docs/checklists/: README.md
frontend-app/: AGENTS.md  index.html  package.json  vite.config.ts
frontend-app/src/: App.tsx  styles.css
infra/: docker-compose.yml
infra/k8s/: deployments.yaml  services.yaml
mcp/: analysis.json  analysis.py  analysis_mcp.py
scripts/: checklist_validator.py
src/api_gateway/: AGENTS.md  __init__.py  main.py
src/backend_loans/: AGENTS.md
src/backend_loans/services/: loan_service.py
src/copilot_instructions_mono.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/worker_ingestion/: __init__.py  worker.py
tests/: test_checklist_validator.py
tests/api/: test_api_gateway.py
tests/backend/: test_loan_logic.py
