[project]
name = "copilot-instructions-mono"
version = "0.1.0"
description = "Demo monorepo showcasing GitHub Copilot instructions, custom agents, and prompt files"
authors = [{ name = "Demo Maintainer", email = "demo@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "anyio>=4.4.0"
]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[project.scripts]
api-gateway = "api_gateway.main:run"
backend-init = "backend_loans.services.loan_service:bootstrap"
worker-ingestion = "worker_ingestion.worker:main"

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
